--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,3 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html {
+    background-color: #fff;
+    color: #555;
+    font-family: 'Lato', 'Arial', 'sans-serif';
+    font-weight: 300;
+    text-rendering: optimizeLegibility;
+    font-size: 20px;
+}
