--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,3 +12,8 @@ html {
     text-rendering: optimizeLegibility;
     font-size: 20px;
 }
+
+header {
+    height: 100vh;
+    background-image: url(img/img-hero-header.jpg);
+}
