--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,5 +15,10 @@ html {
 
 header {
     height: 100vh;
-    background-image: url(img/img-hero-header.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url(img/img-hero-header.jpg);
+    background-size: cover;
+}
+
+header h1 {
+    margin: 0;
 }
