--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,8 +17,32 @@ header {
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url(img/img-hero-header.jpg);
     background-size: cover;
+    background-position: center;
+}
+
+header a {
+    text-decoration: none;
+    color: white;
 }
 
 header h1 {
     margin: 0;
+    color: white;
+    text-transform: uppercase;
+    word-spacing: 15px;
+    letter-spacing: 4px;
+    margin-bottom: 10px;
+}
+
+.hero-text-box {
+    position: absolute;
+    top: 40%;
+    left: 4%;
+}
+
+.btn {
+    border: solid 2px orange;
+    border-radius: 10px;
+    padding : 5px 25px;
+    
 }
