--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,6 +25,28 @@ header a {
     color: white;
 }
 
+header nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 20px;
+}
+
+header .logo {
+    width: 100px;
+    margin-left: 40px;
+    
+}
+
+header .main-nav {
+    width: 85%;
+    display: flex;
+    justify-content: space-around;
+    margin-left: 30%;
+    list-style: none;
+    text-transform: uppercase;
+}
+
 header h1 {
     margin: 0;
     color: white;
