--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -107,3 +107,21 @@ header h1 {
 .section-features {
     margin: 20px 10%;
 }
+
+.section-features>div {
+    text-align: center;
+}
+
+.section-features h2 {
+    margin-bottom: 20px;
+}
+
+.section-features h2::after {
+    content: " ";
+    height: 5px;
+    width: 100px;
+    background-color: orange;
+    display: block;
+    margin: 0 auto;
+    margin-top: 15px;
+}
